--- a/VRChat/78/1215478.html
+++ b/VRChat/78/1215478.html
@@ -4,7 +4,7 @@
     <link href="/manifest.json" rel="manifest">
     <meta charset="utf-8">
     <title>
-      [VRChat]ちょっと良さげな弓[Bow] - メイドの手芸屋 - BOOTH
+      [VRChat]ちょっと良さげな弓[Bow] - 怠岩CG - BOOTH
     </title>
     <meta name="description" content=
     "なんか良さげな弓です 弓△1864 矢△174 2048テクスチャ3枚（Albedo,Metal,Normal）とobjデータが入ってます スタンダードシェーダーにそれぞれテクスチャ放り込んでお使いください。 スケールはキャラやシーンに合わせてください。 弓を打つギミックとかは無いです">
@@ -14,14 +14,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "[VRChat]ちょっと良さげな弓[Bow] - メイドの手芸屋 - BOOTH">
+    "[VRChat]ちょっと良さげな弓[Bow] - 怠岩CG - BOOTH">
     <meta name="twitter:description" content=
     "なんか良さげな弓です 弓△1864 矢△174 2048テクスチャ3枚（Albedo,Metal,Normal）とobjデータが入ってます スタンダードシェーダーにそれぞれテクスチャ放り込んでお使いください。 スケールはキャラやシーンに合わせてください。 弓を打つギミックとかは無いです">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/29cbdbe7-d2fb-463e-9d1e-cb8f1e92083e/i/1215478/973c3b52-a8de-47a0-a16f-9b529060f6cc_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "[VRChat]ちょっと良さげな弓[Bow] - メイドの手芸屋 - BOOTH">
+    "[VRChat]ちょっと良さげな弓[Bow] - 怠岩CG - BOOTH">
     <meta property="og:description" content=
     "なんか良さげな弓です 弓△1864 矢△174 2048テクスチャ3枚（Albedo,Metal,Normal）とobjデータが入ってます スタンダードシェーダーにそれぞれテクスチャ放り込んでお使いください。 スケールはキャラやシーンに合わせてください。 弓を打つギミックとかは無いです">
     <meta property="og:image" content=
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/ae2c55d2ea0ba54025f6.js" defer=
     "defer" nonce=
-    "GGVIgZW/mcOR1eSvqnWzqk1h665eQ4m/C7q8NjdK1no="></script>
+    "WlqtX/bm2VwxR2kw8etwwW2OtQgdYZKhsAqBdAcvQUQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRChat]ちょっと良さげな弓[Bow]","description":"なんか良さげな弓です\n弓△1864\n矢△174\n\n2048テクスチャ3枚（Albedo,Metal,Normal）とobjデータが入ってます\n\nスタンダードシェーダーにそれぞれテクスチャ放り込んでお使いください。\nスケールはキャラやシーンに合わせてください。\n\n弓を打つギミックとかは無いです","url":"https://booth.pm/ja/items/1215478","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/29cbdbe7-d2fb-463e-9d1e-cb8f1e92083e/i/1215478/973c3b52-a8de-47a0-a16f-9b529060f6cc_base_resized.jpg"}
     </script>
@@ -154,9 +154,9 @@
                             data-tracking="click" target="_blank"
                             rel="noopener" href=
                             "https://vrcrock.booth.pm/"><img alt=
-                            "メイドの手芸屋" class=
+                            "怠岩CG" class=
                             "h-[24px] rounded-oval w-[24px]" src=
-                            "https://booth.pximg.net/c/48x48/users/5731716/icon_image/4772a607-8862-4d58-94a3-fc2c54164dc2_base_resized.jpg">メイドの手芸屋</a>
+                            "https://booth.pximg.net/c/48x48/users/5731716/icon_image/4772a607-8862-4d58-94a3-fc2c54164dc2_base_resized.jpg">怠岩CG</a>
                             <h2 class=
                             "font-bold leading-[32px] m-0 text-[24px]">
                               [VRChat]ちょっと良さげな弓[Bow]
