--- a/VRChat/57/1175157.html
+++ b/VRChat/57/1175157.html
@@ -4,7 +4,7 @@
     <link href="/manifest.json" rel="manifest">
     <meta charset="utf-8">
     <title>
-      [VRChat]ちょっと良さげな盾[Shield] - メイドの手芸屋 - BOOTH
+      [VRChat]ちょっと良さげな盾[Shield] - 怠岩CG - BOOTH
     </title>
     <meta name="description" content=
     "なんか良さげな盾です △2106 2048テクスチャ3枚（Albedo,Metal,Normal）とobjデータが入ってます スタンダードシェーダーにそれぞれテクスチャ放り込んでお使いください。 スケールはキャラやシーンに合わせてください。">
@@ -14,14 +14,14 @@
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "[VRChat]ちょっと良さげな盾[Shield] - メイドの手芸屋 - BOOTH">
+    "[VRChat]ちょっと良さげな盾[Shield] - 怠岩CG - BOOTH">
     <meta name="twitter:description" content=
     "なんか良さげな盾です △2106 2048テクスチャ3枚（Albedo,Metal,Normal）とobjデータが入ってます スタンダードシェーダーにそれぞれテクスチャ放り込んでお使いください。 スケールはキャラやシーンに合わせてください。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/29cbdbe7-d2fb-463e-9d1e-cb8f1e92083e/i/1175157/504ecd56-73a8-44ca-b116-2fbd7288ac57_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "[VRChat]ちょっと良さげな盾[Shield] - メイドの手芸屋 - BOOTH">
+    "[VRChat]ちょっと良さげな盾[Shield] - 怠岩CG - BOOTH">
     <meta property="og:description" content=
     "なんか良さげな盾です △2106 2048テクスチャ3枚（Albedo,Metal,Normal）とobjデータが入ってます スタンダードシェーダーにそれぞれテクスチャ放り込んでお使いください。 スケールはキャラやシーンに合わせてください。">
     <meta property="og:image" content=
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/ae2c55d2ea0ba54025f6.js" defer=
     "defer" nonce=
-    "XebEb8pINMPOqa68YtuPxweE+WuGvmrWIkAsg2CE3gY="></script>
+    "IydjLAH11Hz+LtV0kLXUgRhpPuOLdwvbhptuq7Z51M8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"[VRChat]ちょっと良さげな盾[Shield]","description":"なんか良さげな盾です\n△2106\n\n2048テクスチャ3枚（Albedo,Metal,Normal）とobjデータが入ってます\n\nスタンダードシェーダーにそれぞれテクスチャ放り込んでお使いください。\nスケールはキャラやシーンに合わせてください。","url":"https://booth.pm/ja/items/1175157","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/29cbdbe7-d2fb-463e-9d1e-cb8f1e92083e/i/1175157/504ecd56-73a8-44ca-b116-2fbd7288ac57_base_resized.jpg"}
     </script>
@@ -154,9 +154,9 @@
                             data-tracking="click" target="_blank"
                             rel="noopener" href=
                             "https://vrcrock.booth.pm/"><img alt=
-                            "メイドの手芸屋" class=
+                            "怠岩CG" class=
                             "h-[24px] rounded-oval w-[24px]" src=
-                            "https://booth.pximg.net/c/48x48/users/5731716/icon_image/4772a607-8862-4d58-94a3-fc2c54164dc2_base_resized.jpg">メイドの手芸屋</a>
+                            "https://booth.pximg.net/c/48x48/users/5731716/icon_image/4772a607-8862-4d58-94a3-fc2c54164dc2_base_resized.jpg">怠岩CG</a>
                             <h2 class=
                             "font-bold leading-[32px] m-0 text-[24px]">
                               [VRChat]ちょっと良さげな盾[Shield]
