--- a/VRChat/48/1173648.html
+++ b/VRChat/48/1173648.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/ae2c55d2ea0ba54025f6.js" defer=
     "defer" nonce=
-    "EKmh5Le1S7Y1AB+R6pkotxoe49yUxITOr8VQw52muJg="></script>
+    "WPGDNkuUF9Jt1YaI+F/Zjk+ZTllvRnp8iRDKiFVsMns="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"FREE CRUISER アクリルバッチ","description":"VRChat上の「ワールドを渡り歩く孤高の人々」のためのチーム.\nFREE CRUISERのアクリルバッチです。\nコレをつければあなたもFREE CRUISERのメンバー！\n\n\n\nこの商品はpixivFACTORYで作られた商品です。サンプル画像は完成イメージのため、実物と異なる場合があります。","url":"https://booth.pm/ja/items/1173648","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"1120","highPrice":"1770"},"image":"https://booth.pximg.net/c/620x620/68ed4d6d-87a6-44fe-a992-b3aec5be9769/i/1173648/590bcfb2-96a7-4c2f-a084-b3759b64f142_base_resized.jpg"}
     </script>
@@ -463,7 +463,7 @@
                                     "legacy-list-item__content">
                                       <div class="u-d-sp-block">
                                         <span class=
-                                        "autolink u-text-wrap">2023-11-02</span>
+                                        "autolink u-text-wrap">2023/11/07</span>
                                       </div>
                                     </div>
                                   </div>
@@ -491,7 +491,7 @@
                                     "legacy-list-item__content">
                                       <div class="u-d-sp-block">
                                         <span class=
-                                        "autolink u-text-wrap">2023-11-02</span>
+                                        "autolink u-text-wrap">2023/11/07</span>
                                       </div>
                                     </div>
                                   </div>
@@ -519,7 +519,7 @@
                                     "legacy-list-item__content">
                                       <div class="u-d-sp-block">
                                         <span class=
-                                        "autolink u-text-wrap">2023-11-02</span>
+                                        "autolink u-text-wrap">2023/11/07</span>
                                       </div>
                                     </div>
                                   </div>
